blockml/test/errors/05_join/e53/e53_two.view
view: e53_two
table: 2
fields:
- dimension: dim7
  sql: 777
